--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://www.illivium.com/" />
-    <script>window.location.href="https://www.illivium.com/";</script>
+    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbwsGBI64tK18hP3XJLUXFOASCPCIS-UmrCej1rmQyNRK324Zs8oTPGFqJQ1Z7_5SUAy/exec" />
+    <script>window.location.href="https://script.google.com/macros/s/AKfycbwsGBI64tK18hP3XJLUXFOASCPCIS-UmrCej1rmQyNRK324Zs8oTPGFqJQ1Z7_5SUAy/exec";</script>
     <title>Redirecting…</title>
   </head>
   <body>
-    Redirecting to <a href="https://www.illivium.com/">Google</a>…
+    Redirecting to <a href="https://script.google.com/macros/s/AKfycbwsGBI64tK18hP3XJLUXFOASCPCIS-UmrCej1rmQyNRK324Zs8oTPGFqJQ1Z7_5SUAy/exec">Google</a>…
   </body>
 </html>
