--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbwsGBI64tK18hP3XJLUXFOASCPCIS-UmrCej1rmQyNRK324Zs8oTPGFqJQ1Z7_5SUAy/exec" />
-    <script>window.location.href="https://script.google.com/macros/s/AKfycbwsGBI64tK18hP3XJLUXFOASCPCIS-UmrCej1rmQyNRK324Zs8oTPGFqJQ1Z7_5SUAy/exec";</script>
+    <meta http-equiv="refresh" content="0; url=https://go.sparkpostmail.com/f/a/IOSQ-MzzxT-q3uH2dmpDVw~~/AAFNWxA~/W-f3Monhr2tltmRh1-foUlhZ0ldqJ_uXg05wW2dPZhJY3cK4RtBvcZ9xNcrScI-DPJQ1iWUu0OK5c-1Ijbh6i9Cwibpj5m_jLxQK3tX9iwTZNOiffFpK85zJ4PEUVCy6Nv7twaIlr3KeUxcaUCLamsJ8GUJlwxXRLJ-Tzh_jBV7LSWGFpycuMgEU4hdoLdVKmvz9ni75j6TTQ60q1lS2I1KKGaWdeSS8uLuzRKkxohdwsi1dTViHe1EbXjEYSZSc" />
+    <script>window.location.href="https://go.sparkpostmail.com/f/a/IOSQ-MzzxT-q3uH2dmpDVw~~/AAFNWxA~/W-f3Monhr2tltmRh1-foUlhZ0ldqJ_uXg05wW2dPZhJY3cK4RtBvcZ9xNcrScI-DPJQ1iWUu0OK5c-1Ijbh6i9Cwibpj5m_jLxQK3tX9iwTZNOiffFpK85zJ4PEUVCy6Nv7twaIlr3KeUxcaUCLamsJ8GUJlwxXRLJ-Tzh_jBV7LSWGFpycuMgEU4hdoLdVKmvz9ni75j6TTQ60q1lS2I1KKGaWdeSS8uLuzRKkxohdwsi1dTViHe1EbXjEYSZSc";</script>
     <title>Redirecting…</title>
   </head>
   <body>
-    Redirecting to <a href="https://script.google.com/macros/s/AKfycbwsGBI64tK18hP3XJLUXFOASCPCIS-UmrCej1rmQyNRK324Zs8oTPGFqJQ1Z7_5SUAy/exec">Google</a>…
+    Redirecting to <a href="https://go.sparkpostmail.com/f/a/IOSQ-MzzxT-q3uH2dmpDVw~~/AAFNWxA~/W-f3Monhr2tltmRh1-foUlhZ0ldqJ_uXg05wW2dPZhJY3cK4RtBvcZ9xNcrScI-DPJQ1iWUu0OK5c-1Ijbh6i9Cwibpj5m_jLxQK3tX9iwTZNOiffFpK85zJ4PEUVCy6Nv7twaIlr3KeUxcaUCLamsJ8GUJlwxXRLJ-Tzh_jBV7LSWGFpycuMgEU4hdoLdVKmvz9ni75j6TTQ60q1lS2I1KKGaWdeSS8uLuzRKkxohdwsi1dTViHe1EbXjEYSZSc">Google</a>…
   </body>
 </html>
